# bryndza-case-2024

./: LICENSE  README.md  SubTaskA-rag-flashrank.py  SubTaskA-rag.py  SubTaskA.py  SubTaskB-rag-flashrank.py  SubTaskB-rag.py  SubTaskB.py  SubTaskC-rag-flashrank.py  SubTaskC-rag.py  SubTaskC.py  chromadb_rag_query_test.py  create_index.py  ollama-SubTaskB-flashrank.py  ollama-SubTaskB-rag.py  ollama-SubTaskB.py  pyproject.toml
annotations/: error_analysis_SubTaskA.csv  error_analysis_SubTaskB.csv  error_analysis_SubTaskC.csv
utils/: csv_merge.py
