[tool.poetry]
name = "case@eacl2024"
version = "0.1.0"
description = ""
authors = ["mrshu <mrshu@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
scikit-learn = "^1.3.2"
typer = "^0.9.0"
chromadb = "^0.4.21"
tqdm = "^4.66.1"
flashrank = "^0.1.64"
sentence-transformers = "^2.2.2"
ragatouille = "^0.0.2b1"
marimo = "^0.1.77"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
